# Parallel_programming

./: CMakeLists.txt  README.md  generator  lab3  slurm-284088.out  startMPI.pbs
include/: matrix.hpp
input/: A.txt  B.txt
output/: C.txt
src/: generator.cpp  main.cpp  matrix_cuda.cu
verify/: verify.py
